force/src/objects/Milestone__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a significant event in the project&apos;s lifespan.</description>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Initiative_Milestone__c</fullName>
        <description>Milestone for an Asset or a Initiative.</description>
        <inlineHelpText>Milestone for an Asset or a Initiative.</inlineHelpText>
        <label>Asset/Initiative Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gain Stakeholder Buy-in</fullName>
                </value>
                <value>
                    <fullName>Gather Requirements/ Define Scope</fullName>
                </value>
                <value>
                    <fullName>Design/Draft</fullName>
                </value>
                <value>
                    <fullName>Build/Develop Final Content</fullName>
                </value>
                <value>
                    <fullName>Test/Validate</fullName>
                </value>
                <value>
                    <fullName>Deploy/Publish</fullName>
                </value>
                <value>
                    <fullName>Optimize/Maintain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Id__c</fullName>
        <description>Milestone Id to distinguish a milestone for an Asset/Initiative.</description>
        <displayFormat>{000}</displayFormat>
        <inlineHelpText>Milestone Id to distinguish a milestone for an Asset/Initiative.</inlineHelpText>
        <label>Milestone Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <description>Milestone Name</description>
        <inlineHelpText>Name/Label for this milestone.</inlineHelpText>
        <label>Milestone Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestones__c</fullName>
        <label>Associated Phase/Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobilize</fullName>
                </value>
                <value>
                    <fullName>Blueprint</fullName>
                </value>
                <value>
                    <fullName>Analyze</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Adapt &amp; Ongoing Support</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Decision Making Approach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_of_Deliverables__c</fullName>
        <label># of Deliverables</label>
        <summaryForeignKey>Milestone_Deliverables__c.Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>On_Target__c</fullName>
        <description>Displays a status as red, green or yellow ball.</description>
        <formula>if(
( Start_Date__c  &lt;= TODAY()) &amp;&amp; (ISPICKVAL(Progress__c, &quot;Not Started&quot;)), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), if((Planned_End_Date__c &lt;= TODAY()) &amp;&amp; (ISPICKVAL(Progress__c, &quot;In Progress&quot;)), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), if((Planned_End_Date__c &lt;= TODAY()) &amp;&amp; (ISPICKVAL(Progress__c, &quot;Not Started&quot;)), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), 
if((Planned_End_Date__c &lt;= TODAY()+5) &amp;&amp; (ISPICKVAL(Progress__c, &quot;In Progress&quot;)), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;), 
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))))</formula>
        <label>On Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of this Milestone</description>
        <inlineHelpText>Owner of this Milestone</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owning_Team__c</fullName>
        <label>Owning Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Architecture</fullName>
                </value>
                <value>
                    <fullName>Business Architecture</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Solution Architecture</fullName>
                </value>
                <value>
                    <fullName>Technical Architecture</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Change Management – Training</fullName>
                </value>
                <value>
                    <fullName>Change Management – Communications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Supporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Supporter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones (Contact)</relationshipLabel>
        <relationshipName>Supported_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Supporter_s__c</fullName>
        <label>Primary Supporters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#66CCCC</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#CC66CC</color>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release related to this milestone.</description>
        <inlineHelpText>Release related to this milestone.</inlineHelpText>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Red: Milestone completion planned to be missed or missed
Yellow: Milestone completion at risk
Green: Milestone completion on target
Grey: Milestone Completed</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <color>#CC0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <color>#009900</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Grey</fullName>
                    <color>#999999</color>
                    <label>Grey</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Milestones</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Milestones</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Grey</value>
        </filters>
        <filters>
            <field>Progress__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>All Open Milestones</label>
    </listViews>
    <listViews>
        <fullName>All_Release_1_Milestones</fullName>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Owning_Team__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 1</value>
        </filters>
        <filters>
            <field>Milestones__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </filters>
        <label>All Release 1 Design Milestones</label>
    </listViews>
    <listViews>
        <fullName>Application_Architecture_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>On_Target__c</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>Primary_Supporter__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owning_Team__c</field>
            <operation>equals</operation>
            <value>Application Architecture</value>
        </filters>
        <label>Application Architecture Milestones</label>
    </listViews>
    <listViews>
        <fullName>Knowledge_Release_1_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Knowledge Release 1</value>
        </filters>
        <label>Knowledge Release 1 Milestones</label>
    </listViews>
    <listViews>
        <fullName>Maintenance_Release_1_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Maintenance 1</value>
        </filters>
        <label>Maintenance Release 1 Milestones</label>
    </listViews>
    <listViews>
        <fullName>My</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>Release__c</columns>
        <columns>Key_Milestone__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Milestones</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Milestones</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>Release__c</columns>
        <columns>Key_Milestone__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Grey</value>
        </filters>
        <filters>
            <field>Progress__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>My Open Milestones</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>On_Target__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Progress__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Planned_End_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Milestones</label>
    </listViews>
    <listViews>
        <fullName>Release_10_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Team__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 10</value>
        </filters>
        <label>Release 10 Milestones</label>
    </listViews>
    <listViews>
        <fullName>Release_2_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 2</value>
        </filters>
        <label>Release 2 Milestones</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 3</value>
        </filters>
        <label>Release 3 Milestones</label>
    </listViews>
    <listViews>
        <fullName>Release_4_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 4</value>
        </filters>
        <label>Release 4 Milestones</label>
    </listViews>
    <listViews>
        <fullName>Release_5_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 5</value>
        </filters>
        <label>Release 5 Milestones</label>
    </listViews>
    <listViews>
        <fullName>Release_6_Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Progress__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 6</value>
        </filters>
        <label>Release 6 Milestones</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>Milestone_Asset_Initiative</fullName>
        <active>false</active>
        <description>Milestones for Assets/Initiatives</description>
        <label>Milestone for Asset/Initiative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milestone_Release</fullName>
        <active>true</active>
        <description>Milestones specific to Releases.</description>
        <label>Milestone for Release</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_End_Date_Blank</fullName>
        <active>true</active>
        <description>Cannot have a blank actual end date when status is completed</description>
        <errorConditionFormula>ISBLANK( Actual_End_Date__c )
&amp;&amp;
 ISPICKVAL ( Progress__c  , &quot;Complete&quot;)</errorConditionFormula>
        <errorMessage>Please fill out the Actual End Date before saving milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Progress_Required</fullName>
        <active>true</active>
        <description>Progress on a milestone is mandatory</description>
        <errorConditionFormula>ISPICKVAL( Progress__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Please select an appropriate status for this milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Actual_End_Date</fullName>
        <active>true</active>
        <description>Release end date should not be greater than today&apos;s date</description>
        <errorConditionFormula>Actual_End_Date__c &gt; Today()</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual end date should not be greater than today&apos;s date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SetMilestone</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Asset_Initiative_Milestone__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Asset_Initiative_Milestone__c</errorDisplayField>
        <errorMessage>Select an appropriate Milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>planned_end_date</fullName>
        <active>true</active>
        <description>planned end date should be greater than start date</description>
        <errorConditionFormula>OR(Planned_End_Date__c  &lt;  Start_Date__c , Actual_End_Date__c  &lt;  Start_Date__c )</errorConditionFormula>
        <errorMessage>Planned/Actual End Date should be greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>